# dmaic-coach

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: demo.md  demo.tape  example_run.txt  portfolio.md
knowledge_base/: 01-measure-overview.md  02-data-collection-plan.md  03-measurement-system-analysis.md  04-process-capability.md  05-baseline-sigma-dpmo.md  README.md
mcp_server/: stats_server.py
rubric/: measure_rubric.yaml
scenarios/: call_center_aht.yaml  sample_submission.yaml
src/dmaic_coach/: __init__.py  cli.py  config.py
src/dmaic_coach/agent/: evaluator.py  personas.py  session.py  tool_client.py
src/dmaic_coach/llm/: __init__.py  anthropic.py  base.py  grok.py  mock.py  openai.py
src/dmaic_coach/rag/: embedder.py  ingest.py  retriever.py  store.py
src/dmaic_coach/tools/: stats.py
tests/: test_evaluator.py  test_mcp_server.py  test_retriever.py  test_stats.py
